Project Teneo {
    database_type: 'PostgresQL'
    Note: 'Teneo data model'
}

Table org.users {
    id int [pk, increment]
    name varchar
    email varchar
    password_hash varchar
}

Table org.organizations {
    id int [pk, increment]
    name text
    code text
}

Table org.memberships {
    id int [pk, increment]
    role Role
    user_id int [ref: > org.users.id]
    organization_id int [ref: > org.organizations.id]
}

Enum Role {
    admin
    ingester
    uploader
    viewer
}

Table ord.storages {
    id int [pk, increment]
    name varchar
    parameters JSON
}